@startuml
title MedAlerta - Diagrama de Classes

class Usuario {
  idUsuario : Integer
  nome : String
  telefone : String
  email : String
  enderecoRua : String
  enderecoNumero : Integer
  enderecoComplemento : String
  enderecoBairro : String
  enderecoCEP : String
  enderecoCidade : String
  enderecoEstado : String
}

class Medicamento {
  idMedicamento : Integer
  nomeComercial : String
  nomeGenerico : String
  quantidade : QuantidadeTipo
  formaUso : String
  observacao : String
}

class UsuarioMedicamento {
  idUsuario : Integer
  idMedicamento : Integer
  horarioUso : LocalTime
  frequenciaUso : String
  dosagem : String
  dataHorarioAlerta : LocalDateTime
  statusAlerta : StatusAlerta
  dataHorarioConsumo : LocalDateTime
  confirmacaoConsumo : ConfirmacaoConsumo
}

class Frequencia {
  idFrequencia : Integer
  idUsuario : Integer
  horarioUso : LocalTime
  intervaloHoras : Integer
  vezesPorDia : Integer
}

class Alerta {
  idAlerta : Integer
  idUsuario : Integer
  dataHoraAlerta : LocalDateTime
  statusAlerta : StatusAlerta
}

class Consumo {
  idConsumo : Integer
  idUsuario : Integer
  dataHoraConsumo : LocalDateTime
  confirmacaoConsumo : ConfirmacaoConsumo
}

enum QuantidadeTipo {
  UNIDADE
  ML
}

enum StatusAlerta {
  EMITIDO
  NAO_EMITIDO
}

enum ConfirmacaoConsumo {
  SIM
  NAO
}

' ================= RELACIONAMENTOS =================

Usuario "1" -- "*" UsuarioMedicamento
Medicamento "1" -- "*" UsuarioMedicamento

Usuario "1" -- "*" Frequencia
Usuario "1" -- "*" Alerta
Usuario "1" -- "*" Consumo

@enduml